# CBB_model

./: .env  .gitingnore  CLAUDE.md  README.md  docker-comprose.yml  pyproject.toml
infra/sql/: 010_tables.sql  020_arb_alerts.sql  030_games_composite_unique.sql
scripts/: apply_sql.py  db_ping.py  run_arb_worker.py
src/cbb/alerts/: discord.py
src/cbb/api/: main.py
src/cbb/bots/: arb_bot.py
src/cbb/clients/: odds_api.py
src/cbb/config/: settings.py  sports.py
src/cbb/db/: repo.py  session.py
src/cbb/ingestion/: odds_ingest.py
src/cbb/pricing/: arb.py  implied_prob.py
src/cbb_model.egg-info/: SOURCES.txt  requires.txt
tests/: test_arb.py  test_implied_prob.py  test_multi_sport_arb.py  test_repo.py
