[project]
name = "cbb_model"
version = "0.1.0"
description = "College Basketball arbitrage + EV betting bots"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  # API
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",

  # Config
  "pydantic>=2.6",
  "pydantic-settings>=2.2",

  # HTTP client (Odds API)
  "httpx>=0.27",

  # Retries / backoff
  "tenacity>=8.2",

  # Math + data
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.12",

  # Database
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.3",
  "mypy>=1.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true